[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/organizer/OrganizerEntry.gd" type="Script" id=1]
[ext_resource path="res://ui/organizer/OrganizerEditNameButton.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="(entry)" type="PanelContainer"]
margin_right = 286.0
margin_bottom = 28.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
labelPath = NodePath("HBoxContainer/Label")
editNameButtonPath = NodePath("HBoxContainer/EditNameButton")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 286.0
margin_bottom = 28.0

[node name="Label" type="Button" parent="HBoxContainer"]
margin_right = 262.0
margin_bottom = 28.0
size_flags_horizontal = 3
toggle_mode = true
text = "Entry"
flat = true
align = 0

[node name="EditNameButton" parent="HBoxContainer" instance=ExtResource( 2 )]
margin_left = 266.0
margin_right = 286.0
margin_bottom = 28.0
[connection signal="pressed" from="HBoxContainer/Label" to="." method="_on_Label_pressed"]
[connection signal="toggled" from="HBoxContainer/Label" to="." method="_on_Label_toggled"]
[connection signal="pressed" from="HBoxContainer/EditNameButton" to="." method="edit_name"]
